--- a/src/pages/favourites.astro
+++ b/src/pages/favourites.astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = false;
+export const prerender = true;
 
 // export async function GET() {
 //   let number = Math.random();
