--- a/src/components/RecipeCard.astro
+++ b/src/components/RecipeCard.astro
@@ -1,12 +1,12 @@
 ---
-const { title, image_url, name, description } = Astro.props;
+const { id, title, image_url, name, description, when_to_eat } = Astro.props;
 ---
 <style>
     .card {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        padding: 1rem;
+        padding: 1rem 2rem;
         border: 1px solid #d8d8d8;
         border-radius: 8px;
         width: 18rem;
@@ -18,8 +18,14 @@ const { title, image_url, name, description } = Astro.props;
         border-radius: 8px;
         align-self: center;
     }
+    .description-box {
+        margin: 0;
+        display: flex;
+        gap: 0.5rem;
+        flex-direction: column;
+    }
 </style>
-<div class="card">
+<a class="card" href={`/recipes/${id}`} style="text-decoration: none; color: inherit;">
     <h3 style="text-align: center; margin: 0;">{title}</h3>
     {image_url && (
         <img 
@@ -28,6 +34,9 @@ const { title, image_url, name, description } = Astro.props;
             class="recipe-image"
         />
     )} 
-    <p style="margin: 0">{description}</p>
-</div>    
+    <div class="description-box">
+        <p style="text-transform:uppercase; color: #666; margin: 0; font-size: small;">{when_to_eat}</p>
+        <p style="margin: 0; color: #333; font-size: medium">{description}</p>
+    </div>
+</a>
 </div>
