--- a/src/components/RecipeCard.astro
+++ b/src/components/RecipeCard.astro
@@ -13,7 +13,7 @@ const { id, title, image_url, name, description, when_to_eat } = Astro.props;
     }
     .recipe-image {
         width: 100%;
-        max-height: 400px;
+        height: 200px;
         object-fit: cover;
         border-radius: 8px;
         align-self: center;
